add auth and update swagger
